Closed
Bug 217332
Opened 22 years ago
Closed 20 years ago
When I ask for only pages 1 to 1 to be printed, page 2 prints as well. If the page has IFRAME.
Categories
(Core :: Printing: Output, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta4
People
(Reporter: Tony.Town, Assigned: masayuki)
References
Details
Attachments
(2 files)
|
11.94 KB,
text/html
|
Details | |
|
1.06 KB,
patch
|
roc
:
review+
roc
:
superreview+
benjamin
:
approval1.8b4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030624
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030624
When I want to print a map from this site, I go to File... Print and select
Print pages from 1 to 1 because I dont want to print the second page, which is
purely advertising. However, the second page always prints. It is not possible
to select an area on the web page and use Print Selection. (Note: this problem
does not occur with IE Explorer 6)
Reproducible: Always
Steps to Reproduce:
1. As explained above
2.
3.
Actual Results:
As explained above
Expected Results:
It should have printed only the required page.
Comment 1•21 years ago
|
||
I have seen this on many sites. An Australian TV guide is a good example,
when printed in landscape mode.
http://www.ebroadcast.com.au/TV/static/BrisbaneNight.html?
(Moz 1.6, Windows XP)
Comment 2•21 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040614 Firefox/0.9
I've tried this with streetmap.co.uk. It isn't printing the second page, just
the right hand side of page 1 that gets chopped off because its too wide for the
paper size. Print Preview should really reflect what is actually going to get
printed so that you can select the appropriate pages.
| Assignee | ||
Updated•20 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: sujay
Summary: When I ask for only pages 1 to 1 to be printed, page 2 prints as well. → When I ask for only pages 1 to 1 to be printed, page 2 prints as well. If the page has IFRAME.
| Assignee | ||
Comment 3•20 years ago
|
||
| Assignee | ||
Comment 4•20 years ago
|
||
I cannot reproduce on http://www.streetmap.co.uk and
http://www.ebroadcast.com.au/TV/static/BrisbaneNight.html
But I can reproduce with attachment 189541 [details].
If the page has IFRAME and it is positioned second page or more, we can
reproduce it.
| Assignee | ||
Comment 5•20 years ago
|
||
This patch is "ad hoc". But it fixes the problem when we select the "As laid
out of the screen". I will fix the another mode's bug. But, maybe, it is 1.9a
cycle.
Please review this for next release.
Assignee: printing → masayuki
Status: NEW → ASSIGNED
Attachment #189557 -
Flags: superreview?(roc)
Attachment #189557 -
Flags: review?(roc)
| Assignee | ||
Updated•20 years ago
|
Priority: -- → P2
Target Milestone: --- → mozilla1.8beta4
| Assignee | ||
Comment 6•20 years ago
|
||
> This patch is "ad hoc". But it fixes the problem when we select the "As laid
> out of the screen". I will fix the another mode's bug. But, maybe, it is 1.9a
> cycle.
> Please review this for next release.
Sorry, I mistook to understand for |mPrintAsIs|. That is flag of including
IFRAME or OBJECT. So, this patch fixes the problem when the page has IFRAME or
OBJECT.
There is not relation for "As laid out of the screen". Sorry.
| Assignee | ||
Comment 7•20 years ago
|
||
So, the patch is NOT "ad hoc". It fixes this problem completely.
Please review it. thanks.
Attachment #189557 -
Flags: superreview?(roc)
Attachment #189557 -
Flags: superreview+
Attachment #189557 -
Flags: review?(roc)
Attachment #189557 -
Flags: review+
| Assignee | ||
Comment 8•20 years ago
|
||
Comment on attachment 189557 [details] [diff] [review]
Patch rv1.0
The risk is low.
Attachment #189557 -
Flags: approval1.8b4?
Updated•20 years ago
|
Attachment #189557 -
Flags: approval1.8b4? → approval1.8b4+
| Assignee | ||
Comment 9•20 years ago
|
||
Checked-in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•